# SoundBite

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
src/: audio_processing.py  gradio_app.py  llm_utils.py
